--- a/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
@@ -33,3 +33,4 @@ periodicite: autre
 montant: 400
 link: https://www.jeunesdu62.fr/Ma-mobilite/Mesure-permis-engagement-citoyen
 teleservice: https://www.jeunesdu62.fr/Ma-mobilite/Mesure-permis-engagement-citoyen/Mesure-permis-engagement-citoyen-formulaire-de-demande
+private: true
