--- a/data/benefits/javascript/caf-haute-marne-aide-equipement-informatique.yml
+++ b/data/benefits/javascript/caf-haute-marne-aide-equipement-informatique.yml
@@ -1,11 +1,6 @@
 label: prêt à taux zéro pour l’équipement informatique des jeunes
 institution: caf_haute_marne
-description: La CAF de la Haute-Marne propose une aide à l'équipement
-  informatique destinée aux jeunes de 10 à 18 ans dans le cadre des études
-  ou jusqu'à 25 ans pour accompagner une formation ou une reprise d'activité professionnelle.
-  Il s'agit d'un prêt sans intérêt d’un montant maximum de 500€ pour l’acquisition de matériel informatique,
-  avec remboursement de 35€ par mois. Une seule aide peut être accordée par foyer et par période
-  de cinq ans.
+description: La CAF de la Haute-Marne propose une aide à l'équipement informatique destinée aux jeunes de 10 à 18 ans dans le cadre des études ou jusqu'à 25 ans pour accompagner une formation ou une reprise d'activité professionnelle. Il s'agit d'un prêt sans intérêt, avec remboursement de 35€ par mois. Une seule aide peut être accordée par foyer et par période de cinq ans.
 conditions:
   - Transmettre une attestation des parents attestant que le foyer n’est pas
     équipé d’un ordinateur, ou que l’équipement est insuffisant compte-tenu de
