Met à jour les aides Bafa de la Caf du Vaucluuse.

--- a/data/benefits/javascript/caf-vaucluse-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-vaucluse-aide-bafa-generale.yml
@@ -1,13 +1,12 @@
 label: aide au BAFA pour une session de formation générale
 institution: caf_vaucluse
 description: L'aide à la formation du BAFA est une aide locale mise à
-  disposition par la CAF du Vaucluse pour vous aider à financer votre session en
-  complément de l'aide
-  nationale apportée par la CAF.
+  disposition par la CAF du Vaucluse pour vous aider à financer votre session générale en
+  complément de l'aide nationale apportée par la CAF.
 conditions:
   - Être allocataire ou rattaché au dossier allocataire de vos parents.
   - Être sans emploi fixe rémunéré.
-  - Suivre votre stage dans un organisme de formation domicilié en PACA.
+  - 'Renvoyer le formulaire de demande dûment complété par email à <a href="transmettreundocument.caf84@info-caf.fr">transmettreundocument.caf84@info-caf.fr</a> ou par voie postale à lʼadresse suivante : Caf de Vaucluse - SIDP-BAFA - 218 boulevard Pierre BOULLE - 84049 AVIGNON Cedex 9.'
 conditions_generales:
   - type: age
     operator: ">="
@@ -18,16 +17,13 @@ conditions_generales:
   - type: departements
     values:
       - "84"
-  - type: quotient_familial
-    period: month
-    value: 396
-    operator: "<="
 profils: []
-link: https://www.caf.fr/partenaires/caf-de-vaucluse/partenaires-locaux/jeunesse/brevet-d-aptitude-aux-fonctions-d-animateurs-bafa-les-aides-de-la-caf#:~:text=La%20CAF%20de%20Vaucluse%20apporte,dans%20leur%20d%C3%A9marche%20de%20formation.&text=%3E%20L'organisme%20de%20formation%20doit,Administration%20est%20de%20198%20%E2%82%AC.
-instructions: https://www.caf.fr/partenaires/caf-de-vaucluse/partenaires-locaux/jeunesse/brevet-d-aptitude-aux-fonctions-d-animateurs-bafa-les-aides-de-la-caf#:~:text=La%20CAF%20de%20Vaucluse%20apporte,dans%20leur%20d%C3%A9marche%20de%20formation.&text=%3E%20L'organisme%20de%20formation%20doit,Administration%20est%20de%20198%20%E2%82%AC.
+link: https://caf.fr/allocataires/caf-de-vaucluse/offre-de-service/vie-professionnelle/le-bafa
+instructions: https://caf.fr/sites/default/files/medias/841/VIE%20PROFESSIONNELLE/BAFA/2024_Plaquette_AFI_BAFA_BAFD.pdf
+form: https://caf.fr/sites/default/files/medias/841/VIE%20PROFESSIONNELLE/BAFA/2024_Dossier_AFI_Bafa_Bafd.pdf
 prefix: l’
 type: float
 unit: €
 periodicite: ponctuelle
-montant: 198
+montant: 200
 interestFlag: _interetBafa
