--- a/data/benefits/javascript/caf_haute_garonne-aide-complémentaire-au-bafa-handicap.yml
+++ b/data/benefits/javascript/caf_haute_garonne-aide-complémentaire-au-bafa-handicap.yml
@@ -5,7 +5,7 @@ description: La Caf de la Haute-Garonne propose une aide complémentaire BAFA
   d'enfants en situation de handicap dans les centres de loisirs", dans un des
   <a target="_blank" title="Organismes conventionnés - Nouvelle fenêtre"
   rel="noopener"
-  href="https://fr.calameo.com/read/003857823acdee8c8d857?page=15">organismes
+  href="https://www.bafa-bafd.jeunes.gouv.fr/coms/listeOfn.aspx">organismes
   conventionnés</a>.
 prefix: l’
 conditions_generales:
@@ -17,12 +17,12 @@ conditions_generales:
       - "31"
 profils: []
 conditions:
-  - Compléter votre <a target="_blank" title="Demande d'aide au BAFA - Nouvelle
+  - Compléter votre <a target="_blank" title="Formulaire de demande d'aide BAFA (PDF) - Nouvelle
     fenêtre" rel="noopener"
-    href="https://connect.caf.fr/creationcompteappli/dist/?forceReload=20211220&contexteAppel=caffr&urlredirect=%2Fredirect%2Fs%2FRedirect%3Fpage%3DmonCompteFormulaires%26prestaDemandee%3DDBAFA&contexteDemandePrestation=true#/pageintermediaire">demande
-    d'aide au BAFA</a> et y joindre <a target="_blank" title="l'attestation -
+    href="https://www.caf.fr/sites/default/files/medias/311/Formulaire%20BAFA%202020.pdf">demande
+    d'aide au BAFA (PDF)</a> et y joindre <a target="_blank" title="Attestation (PDF) -
     Nouvelle fenêtre" rel="noopener"
-    href="https://fr.calameo.com/read/003857823386e1cb70e9e">l'attestation</a>
+    href="https://www.calameo.com/read/003857823386e1cb70e9e">l'attestation (PDF)</a>
     mentionnant que la session est axée sur l'accueil d'enfants en situation de
     handicap.
 interestFlag: _interetBafa
@@ -33,4 +33,3 @@ legend: maximum
 montant: 230
 link: https://www.caf.fr/allocataires/caf-de-la-haute-garonne/actualites-departementales/devenir-animateur-vous-tente-la-caf-vous-aide-financer-votre-bafa
 form: https://www.calameo.com/read/003857823386e1cb70e9e
-private: true
