Met à jour l'aide Bafa de la Caf de la Haute Garonne.

--- a/data/benefits/javascript/caf_haute_garonne-aide-complémentaire-au-bafa-handicap.yml
+++ b/data/benefits/javascript/caf_haute_garonne-aide-complémentaire-au-bafa-handicap.yml
@@ -5,7 +5,7 @@ description: La Caf de la Haute-Garonne propose une aide complémentaire BAFA
   d'enfants en situation de handicap dans les centres de loisirs", dans un des
   <a target="_blank" title="Organismes conventionnés - Nouvelle fenêtre"
   rel="noopener"
-  href="https://www.bafa-bafd.jeunes.gouv.fr/coms/listeOfn.aspx">organismes
+  href="https://www.caf.fr/sites/default/files/medias/311/Formulaire%20BAFA%202020.pdf#page=3">organismes
   conventionnés</a>.
 prefix: l’
 conditions_generales:
