cache le doublon d'éhop

--- a/data/benefits/javascript/region_bretagne-éhop-covoiturage-solidaire-pour-lemploi.yml
+++ b/data/benefits/javascript/region_bretagne-éhop-covoiturage-solidaire-pour-lemploi.yml
@@ -26,3 +26,4 @@ unit: €
 periodicite: autre
 link: https://ehopcovoiturons-nous.fr/particuliers
 teleservice: https://m.ouestgo.fr/#/solidary-transport/home/request
+private: true
