--- a/data/benefits/javascript/bretagne-b-monde-individuel.yml
+++ b/data/benefits/javascript/bretagne-b-monde-individuel.yml
@@ -2,14 +2,14 @@ label: bourse B-Monde Mobilité individuelle
 institution: region_bretagne
 description:
   La région Bretagne encourage la mobilité internationale des lycéens, étudiants
-  et stagiaires de la formation professionnelle,
-  en leur offrant des bourses pour les aider à financer un projet de stage ou de séjour d’études
-  à l’étranger, réalisé dans le cadre du cursus de formation
-  et faisant l’objet d’une validation par l’établissement breton dans lequel est inscrit le demandeur.
+  et stagiaires de la formation professionnelle, en leur offrant des bourses
+  pour les aider à financer un stage ou un séjour d’études à l’étranger, réalisé
+  dans le cadre du cursus de formation et faisant l’objet d’une validation
+  par l’établissement breton dans lequel est inscrit le demandeur.
 conditions:
+  - Être étudiant ou lycéen en voie professionnelle (CAP, Bac professionnel, Bac technologique "Hôtellerie") ou stagiaire de la formation professionnelle.
   - Contacter obligatoirement votre établissement qui vous indiquera la marche à suivre pour votre projet de mobilité et votre demande de bourse à la région Bretagne.
-  - Ne pas être bénéficiaire d'une autre aide publique à la mobilité
-    internationale (européenne, nationale, régionale, départementale, locale).
+  - Ne pas être bénéficiaire d'une autre aide publique à la mobilité internationale (européenne, nationale, régionale, départementale, locale).
   - Partir pour un séjour compris entre 26 (12 jours pour les élèves scolarisés en CAP) et 300 jours.
   - 'Choisir <a target="_blank" rel="noopener" title="Liste des destinations éligibles (téléchargement docx) - Nouvelle fenêtre" href="https://www.bretagne.bzh/app/uploads/ANNEXE-Destinations-Mobilite-Individuelle.docx">une destination parmi celles listées en annexe</a>.'
 conditions_generales:
@@ -42,7 +42,6 @@ profils:
           - licence_3
           - master_1
           - master_2
-      - type: formation_sanitaire_social
   - type: stagiaire
     conditions: []
 link: https://europe.bzh/aides/fiches/b-monde-mobilite-individuelle/
@@ -54,4 +53,3 @@ unit: €
 periodicite: ponctuelle
 legend: par jour en moyenne
 montant: 14
-interestFlag: _interetEtudesEtranger
