--- a/data/benefits/javascript/bretagne-b-monde-individuel.yml
+++ b/data/benefits/javascript/bretagne-b-monde-individuel.yml
@@ -7,7 +7,7 @@ description:
   dans le cadre du cursus de formation et faisant l’objet d’une validation
   par l’établissement breton dans lequel est inscrit le demandeur.
 conditions:
-  - Être étudiant ou lycéen en voie professionnelle (CAP, Bac professionnel, Bac technologique "Hôtellerie") ou stagiaire de la formation professionnelle.
+  - Être étudiant ou stagiaire de la formation professionnelle ou lycéen en voie professionnelle (Certificat d'Aptitude Professionnelle (CAP), Bac professionnel, Bac technologique "Hôtellerie", Brevet des métiers d’arts (BMA), Formation Complémentaire d’Initiative Locale (FCIL), Mention complémentaire (MC), Diplôme de Technicien des Métiers du Spectacle (DTMS)).
   - Contacter obligatoirement votre établissement qui vous indiquera la marche à suivre pour votre projet de mobilité et votre demande de bourse à la région Bretagne.
   - Ne pas être bénéficiaire d'une autre aide publique à la mobilité internationale (européenne, nationale, régionale, départementale, locale).
   - Partir pour un séjour compris entre 26 (12 jours pour les élèves scolarisés en CAP) et 300 jours.
