--- a/data/benefits/openfisca/crous_aide_100_repas_gratuits.yml
+++ b/data/benefits/openfisca/crous_aide_100_repas_gratuits.yml
@@ -1,4 +1,4 @@
-label: aide du crous et de la région Hauts-de-France de 100 repas gratuits aux étudiants boursiers échelon 3 à 7
+label: 100 repas gratuits en restos'U pour les étudiants boursiers échelon 3 à 7
 institution: hauts_de_france
 description:
   Le conseil régional des Hauts-de-France en partenariat avec le Crous, a mis en place une aide à la restauration.
@@ -6,10 +6,11 @@ description:
   les plus élevés (3, 4, 5, 6, 7) et âgés de moins de 35 ans (limite d’âge non applicable aux étudiants en situation de handicap).
 conditions:
   - Être inscrit dans un établissement d’enseignement supérieur, public ou privé, partenaire de la Région, reconnu par le ministère de l’Enseignement
-    supérieur, de la recherche et de l’innovation sur le territoire des Hauts-de-France, ou inscrits dans un établissement dispensant une formation
+    supérieur, de la recherche et de l’innovation sur le territoire des Hauts-de-France, ou être inscrit dans un établissement dispensant une formation
     sanitaire ou sociale gérée par la Région.
   - Être boursier du Crous ou de la Région Hauts-de-France à l’un des échelons de bourse (3, 4, 5, 6, ou 7), ou bien être signalé par le service social du Crous.
   - Être inscrit dans un établissement autre qu'un lycée (sont exclus les étudiants dont l’établissement d’inscription est un lycée comme les étudiants en BTS ou CPGE).
+  - Activer <a target="_blank" rel="noopener" title="Activer mon compte Izzly - Nouvelle fenêtre" href="https://www.crous-lille.fr/se-restaurer/payer-son-repas/payer-avec-son-compte-izly-dans-les-restos-u-et-sur-le-campus/">votre compte Izly</a>, puis envoyer un message à <a target="_blank" rel="noopener" title="Assistance Izzly - Nouvelle fenêtre" href="https://www.crous-lille.fr/contacts/compte-izly/">l'assistance Izly</a> avec la mention « 100 repas région » en objet.
 periodicite: ponctuelle
 link: https://www.crous-lille.fr/se-restaurer/payer-son-repas/aide-restauration-region-hauts-de-france/
 instructions: https://www.crous-lille.fr/se-restaurer/payer-son-repas/aide-restauration-region-hauts-de-france/
@@ -18,4 +19,3 @@ entity: individus
 type: bool
 unit: null
 openfiscaPeriod: thisMonth
-private: true
