Màj le lien du téléservice.

--- a/data/benefits/javascript/region-provence-alpes-cote-azur-programme-regional-aide-mobilite-etudiante-prame.yml
+++ b/data/benefits/javascript/region-provence-alpes-cote-azur-programme-regional-aide-mobilite-etudiante-prame.yml
@@ -29,4 +29,4 @@ periodicite: annuelle
 legend: maximum
 montant: 2500
 link: https://www.maregionsud.fr/vos-aides/detail/aide-a-la-mobilite-etudiante-prame-enseignement-superieur
-teleservice: https://aidesformation.maregionsud.fr/
+teleservice: https://aidesenligne.maregionsud.fr/aides/#/crsud/connecte/F_AIRMI/depot/simple
