màj le rme de petit-couronne.

--- a/data/benefits/javascript/petit_couronne_revenu_minimum_etudiant.yml
+++ b/data/benefits/javascript/petit_couronne_revenu_minimum_etudiant.yml
@@ -1,11 +1,11 @@
 label: revenu minimum étudiant de la ville de Petit-Couronne
 institution: ville_petit_couronne
 description:
-  'La ville de Petit-Couronne soutient les étudiants en leur octroyant
+  "La ville de Petit-Couronne soutient les étudiants en leur octroyant
   une aide financière complémentaire et indépendante des autres bourses dʼétudes. Lʼaide
   peut être accordée un maximum de trois ans.
   Les dossiers d’inscriptions sont à retirer à chaque rentrée début septembre auprès
-  de la Maison de la Solidarité. Renseignements par téléphone au <a href="tel:+33232116470">02 32 11 64 70</a>.<br/>'
+  de la Maison de la Solidarité."
 prefix: le
 conditions_generales:
   - type: communes
@@ -26,6 +26,7 @@ conditions:
   - Résider à Petit-Couronne depuis au moins trois ans.
   - Être titulaire du Baccalauréat.
   - Être inscrit ou inscrite dans lʼenseignement supérieur.
+  - 'Contacter le service par téléphone au <a href="tel:+33232116470">02 32 11 64 70</a> pour toute demande de renseignements.'
 link: https://www.ville-petit-couronne.fr/le-revenu-minimum-etudiant
 instructions: https://www.calameo.com/read/006389672c613d6338231
 type: float
