Met à jour les aides Bafa de la Caf du Vaucluse (#4592)
* Met à jour l'aide de la région PACA, PRAME pour les étudiants.

* Met à jour les aides Bafa de la Caf du Vaucluuse.

* corrige coquille redirection email.

* Màj le lien du téléservice.

--- a/data/benefits/javascript/caf-vaucluse-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-vaucluse-aide-bafa-approfondissement.yml
@@ -11,23 +11,20 @@ conditions_generales:
     value: 16
   - type: age
     operator: <=
-    value: 26
+    value: 25
   - type: departements
     values:
       - "84"
-  - type: quotient_familial
-    period: month
-    value: 396
-    operator: "<="
 profils: []
 conditions:
   - Être allocataire ou rattaché au dossier allocataire de vos parents.
-  - Envoyer à votre CAF le formulaire ci-dessous par courrier.
+  - Être sans emploi fixe rémunéré.
+  - 'Renvoyer le formulaire de demande dûment complété par email à <a href="mailto:transmettreundocument.caf84@info-caf.fr">transmettreundocument.caf84@info-caf.fr</a> ou par voie postale à lʼadresse suivante : Caf de Vaucluse - SIDP-BAFA - 218 boulevard Pierre BOULLE - 84049 AVIGNON Cedex 9.'
 interestFlag: _interetBafa
 type: float
 unit: €
 periodicite: ponctuelle
-montant: 198
+montant: 200
 link: https://caf.fr/allocataires/caf-de-vaucluse/offre-de-service/vie-professionnelle/le-bafa
-form: https://caf.fr/sites/default/files/medias/841/VIE%20PROFESSIONNELLE/Cerfa1138102_demande_daide_bafa.pdf
-instructions: https://caf.fr/allocataires/caf-de-vaucluse/offre-de-service/vie-professionnelle/le-bafa
+form: https://caf.fr/sites/default/files/medias/841/VIE%20PROFESSIONNELLE/BAFA/2024_Dossier_AFI_Bafa_Bafd.pdf
+instructions: https://caf.fr/sites/default/files/medias/841/VIE%20PROFESSIONNELLE/BAFA/2024_Plaquette_AFI_BAFA_BAFD.pdf
