--- a/data/benefits/javascript/region-provence-alpes-cote-azur-programme-regional-aide-mobilite-etudiante-prame.yml
+++ b/data/benefits/javascript/region-provence-alpes-cote-azur-programme-regional-aide-mobilite-etudiante-prame.yml
@@ -28,5 +28,5 @@ unit: €
 periodicite: annuelle
 legend: maximum
 montant: 2500
-link: https://www.maregionsud.fr/vos-aides/detail/prame-enseignement-superieur
-teleservice: https://aidesformation.maregionsud.fr/
+link: https://www.maregionsud.fr/vos-aides/detail/aide-a-la-mobilite-etudiante-prame-enseignement-superieur
+teleservice: https://aidesenligne.maregionsud.fr/aides/#/crsud/connecte/F_AIRMI/depot/simple
