Remplace le lien Calaméo par un PDF ciblé sur la bonne page.

--- a/data/benefits/javascript/caf_haute_garonne-aide-complémentaire-au-bafa-handicap.yml
+++ b/data/benefits/javascript/caf_haute_garonne-aide-complémentaire-au-bafa-handicap.yml
@@ -22,7 +22,7 @@ conditions:
     href="https://www.caf.fr/sites/default/files/medias/311/Formulaire%20BAFA%202020.pdf">demande
     d'aide au BAFA (PDF)</a> et y joindre <a target="_blank" title="Attestation (PDF) -
     Nouvelle fenêtre" rel="noopener"
-    href="https://www.calameo.com/read/003857823386e1cb70e9e">l'attestation (PDF)</a>
+    href="https://www.caf.fr/sites/default/files/medias/311/Formulaire%20BAFA%202020.pdf#page=2">l'attestation (PDF)</a>
     mentionnant que la session est axée sur l'accueil d'enfants en situation de
     handicap.
 interestFlag: _interetBafa
