--- a/data/benefits/javascript/ville_grande_synthe_revenu_minimum_etudiant.yml
+++ b/data/benefits/javascript/ville_grande_synthe_revenu_minimum_etudiant.yml
@@ -1,6 +1,6 @@
 label: revenu minimum étudiant de la ville de Grande Synthe
 institution: ville_grande_synthe
-description: 'La ville de Grande Synthe soutient les étudiants en leur octroyant une aide financière complémentaire et indépendante des autres bourses dʼétudes. Le dépôt des dossiers de demande sʼeffectue sur rendez-vous au Centre Communal dʼAction Sociale (CCAS) en présence de lʼétudiant. Pour tous renseignements vous pouvez contacter le service par mail à <a href="mailto:ccas@ville-grande-synthe.fr">ccas@ville-grande-synthe.fr</a> ou par téléphone au <a href="tel:+33328627768">03 28 62 77 68</a>.<br/>'
+description: "La ville de Grande Synthe soutient les étudiants en leur octroyant une aide financière complémentaire et indépendante des autres bourses dʼétudes. Le dépôt des dossiers de demande sʼeffectue sur rendez-vous au Centre Communal dʼAction Sociale (CCAS) en présence de lʼétudiant."
 prefix: le
 conditions_generales:
   - type: communes
@@ -20,6 +20,7 @@ profils:
 conditions:
   - Être inscrit dans lʼEnseignement Supérieur (post-baccalauréat).
   - Justifier de trois années de résidence sur Grande Synthe.
+  - 'Contacter le service par mail à <a href="mailto:ccas@ville-grande-synthe.fr">ccas@ville-grande-synthe.fr</a> ou par téléphone au <a href="tel:+33328627768">03 28 62 77 68</a> pour toute demande de renseignement.'
 link: https://www.ville-grande-synthe.fr/mon-quotidien/centre-communal-daction-sociale-ccas/solidarite/le-revenu-minimum-etudiant/
 form: https://www.ville-grande-synthe.fr/app/uploads/2024/07/Formulaire-20242025.pdf
 type: float
