--- a/data/benefits/javascript/guadeloupe-bourse-sociale.yml
+++ b/data/benefits/javascript/guadeloupe-bourse-sociale.yml
@@ -23,6 +23,7 @@ profils:
   - type: enseignement_superieur
     conditions: []
 link: https://www.regionguadeloupe.fr/les-aides-les-services/guide-des-aides/detail/actualites/bourse-sociale/categorie/formation-enseignement-jeunesse/#_
+teleservice: https://aides.regionguadeloupe.fr/gesaides_web/jsp/nouveauContexte.action?codeAction=M42-ACCUEIL
 prefix: la
 type: float
 unit: €
