--- a/data/benefits/javascript/guadeloupe-hebergement-cite-internationale-universitaire-de-paris.yml
+++ b/data/benefits/javascript/guadeloupe-hebergement-cite-internationale-universitaire-de-paris.yml
@@ -21,4 +21,5 @@ type: bool
 unit: €
 periodicite: autre
 link: https://www.regionguadeloupe.fr/les-aides-les-services/guide-des-aides/detail/actualites/demande-dhebergement-a-la-cite-internationale-universitaire-de-paris-pour-les-etudiants-de-guadelou/categorie/formation-enseignement-jeunesse/#_
+teleservice: https://aides.regionguadeloupe.fr/gesaides_web/jsp/nouveauContexte.action?codeAction=M42-ACCUEIL
 instructions: https://www.regionguadeloupe.fr/les-aides-les-services/guide-des-aides/detail/actualites/demande-dhebergement-a-la-cite-internationale-universitaire-de-paris-pour-les-etudiants-de-guadelou/categorie/formation-enseignement-jeunesse/#_
