--- a/data/benefits/javascript/guadeloupe-stage-regional-jeunes-en-entreprise.yml
+++ b/data/benefits/javascript/guadeloupe-stage-regional-jeunes-en-entreprise.yml
@@ -24,4 +24,5 @@ unit: €
 periodicite: ponctuelle
 montant: 500
 link: https://www.regionguadeloupe.fr/les-aides-les-services/guide-des-aides/detail/actualites/stage-regional-jeunes-en-entreprise/categorie/economie-emploi-entreprises/#_
+teleservice: https://aides.regionguadeloupe.fr/gesaides_web/jsp/nouveauContexte.action?codeAction=M42-ACCUEIL
 instructions: https://www.regionguadeloupe.fr/les-aides-les-services/guide-des-aides/detail/actualites/stage-regional-jeunes-en-entreprise/categorie/economie-emploi-entreprises/#_
