--- a/data/benefits/javascript/ville_montbard_revenu_minimum_etudiant.yml
+++ b/data/benefits/javascript/ville_montbard_revenu_minimum_etudiant.yml
@@ -24,7 +24,7 @@ conditions:
   - Être titulaire du Baccalauréat.
   - Être étudiant dans lʼEnseignement Supérieur.
   - Résider à Montbard depuis au moins 2 ans.
-  - 'Faire votre demande de Revenu Minimum Etudiant avant la fin octobre au Centre Communal dʼAction Sociale, situé au 3 passage Anatole France et joignable par téléphone au <a href="tel:+33380925932">03 80 92 59 32</a> pour toute demande de renseignement.'
+  - 'Faire votre demande de Revenu Minimum Etudiant avant la fin octobre au Centre Communal dʼAction Sociale (CCAS), situé au 3 passage Anatole France et joignable par téléphone au <a href="tel:+33380925932">03 80 92 59 32</a> pour toute demande de renseignement.'
 link: https://www.montbard.com/index.php/scolarite/revenu-minimum-etudiant-rme
 type: float
 unit: €
