--- a/data/benefits/openfisca/montpellier_mutuelle_communale.yml
+++ b/data/benefits/openfisca/montpellier_mutuelle_communale.yml
@@ -1,6 +1,6 @@
 label: mutuelle communale de la ville de Montpellier
 institution: ville_montpellier
-description: La ville de Montpellier met à disposition de ses habitants une mutuelle communale avantageuse financierement.
+description: La ville de Montpellier met à disposition de ses habitants une mutuelle communale avantageuse financièrement.
 conditions:
   - Ne pas bénéficier de la Complementaire Santé Solidaire.
 link: https://www.montpellier.fr/4884-mutuelle-communale.htm
