--- a/data/benefits/openfisca/eure_et_loir_eligibilite_faj.yml
+++ b/data/benefits/openfisca/eure_et_loir_eligibilite_faj.yml
@@ -3,7 +3,7 @@ institution: departement_eure_et_loir
 description: >
   Cette aide permet de favoriser la réalisation d'un projet d'insertion sociale et profesionnelle.
 conditions:
-  - "Suivi par la Mission Locale ou le Service d’Action Sociale du Conseil Départemental"
+  - "Suivi par la Mission Locale ou le Service d’Action Sociale du Conseil Départemental."
   - "Contacter le conseiller de la Mission Locale ou du service de l'Action Sociale afin d'effectuer la demande auprés de l'Espace Insertion."
 link: https://mesdemarches.eurelien.fr/insertion-professionnelle/jai-moins-de-26-ans/je-souhaite-beneficier-du-faj/
 prefix: le
