--- a/data/benefits/openfisca/eure_et_loir_eligibilite_pret_vehicule.yml
+++ b/data/benefits/openfisca/eure_et_loir_eligibilite_pret_vehicule.yml
@@ -3,8 +3,8 @@ institution: departement_eure_et_loir
 description: >
   Le conseil départemental peut proposer un prêt de vehicule pour les bénéficiaires du RSA, détenteur d'un permis B pour une période minimum de 5 jours.
 conditions:
-  - "Démarrer un emploi, une formation qualifiante ou être en immersion au sein d'une entreprise"
-  - "Contacter le référent RSA pour connaître l'égibilité à ce dispositif"
+  - "Démarrer un emploi, une formation qualifiante ou être en immersion au sein d'une entreprise."
+  - "Contacter le référent RSA pour connaître l'égibilité à ce dispositif."
 link: https://mesdemarches.eurelien.fr/insertion-professionnelle/je-suis-beneficiaire-du-rsa/jai-besoin-dun-pret-de-vehicule/
 prefix: le
 type: bool
