--- a/data/benefits/javascript/guadeloupe-bourse-sanitaire.yml
+++ b/data/benefits/javascript/guadeloupe-bourse-sanitaire.yml
@@ -3,7 +3,7 @@ institution: guadeloupe
 description: La bourse sanitaire attribuée par la Région Guadeloupe contribue à
   soutenir financièrement les stagiaires, élèves, étudiants et étudiantes poursuivant des
   formations sanitaires dans les établissements de formation agréés par la
-  collectivité régionale.
+  collectivité régionale. Les demandes de bourses se font chaque année de mi-août à mi-octobre puis de début janvier à début mars.
 conditions:
   - Poursuivre une formation sociale dans un des établissements de formation
     listés <a target="_blank" rel="noopener" title ="Voir les établissements de formation - Nouvelle fenêtre"
