--- a/data/benefits/javascript/guadeloupe-stage-regional-jeunes-en-entreprise.yml
+++ b/data/benefits/javascript/guadeloupe-stage-regional-jeunes-en-entreprise.yml
@@ -1,7 +1,8 @@
 label: stage Régional - Jeunes en Entreprise
 institution: guadeloupe
 description: La Région vous permet d'effectuer une première expérience au sein
-  d’une entreprise locale et de percevoir une gratification.
+  d’une entreprise locale et de percevoir une gratification. Les candidatures sont ouvertes
+  chaque année au cours du mois de mai et les stages, d'une durée d'un mois, débutent soit le 1er juillet, soit le 1er août.
 prefix: le
 conditions_generales:
   - type: regions
