--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ SENTRY_BACKEND_PROJECT=
 SENTRY_FRONTEND_DSN=
 SENTRY_FRONTEND_AUTH_TOKEN=
 SENTRY_FRONTEND_PROJECT=
+SENTRY_CRON_DSN=
 
 SESSION_SECRET=
 
