--- a/data/benefits/javascript/ville_cerizay_revenu_minimum_etudiant.yml
+++ b/data/benefits/javascript/ville_cerizay_revenu_minimum_etudiant.yml
@@ -1,4 +1,4 @@
-label: revenu minimum étudiant de Cerizay
+label: revenu minimum étudiant de la ville de Cerizay
 institution: ville_cerizay
 description:
   "La ville de Cerizay soutient les étudiants en leur octroyant une aide financière complémentaire et indépendante des autres bourses dʼétudes.
@@ -24,9 +24,9 @@ conditions:
   - Être titulaire du Baccalauréat.
   - Être étudiant dans lʼEnseignement Supérieur.
   - Résider à Cerizay depuis au moins un an.
-  - Compléter <a target="_blank" title="Formulaire de demande Revenu Minimum Etudiant de Cerizay - Nouvelle fenêtre" rel="noopener" href="file:///Users/yasmineberrada/Downloads/Dossier%20inscription%20RME%202024-2025.pdf">le dossier de demande<a/> et le déposer en mairie de Cerizay.
+  - 'Télécharger <a target="_blank" title="Formulaire de demande Revenu Minimum Etudiant de Cerizay - Nouvelle fenêtre" rel="noopener" href="https://cerizay.fr/index.php/acces-rapide/telechargements/category/11-education-et-jeunesse?download=1052:dossier-rme-2024-2025">le dossier de demande<a/>, le compléter et le déposer en mairie de Cerizay.'
 link: https://cerizay.fr/index.php/vivezvotreville/education-jeunesse/jeunesse/89-rme
-form: file:///Users/yasmineberrada/Downloads/Dossier%20inscription%20RME%202024-2025.pdf
+form: https://cerizay.fr/index.php/acces-rapide/telechargements/category/11-education-et-jeunesse?download=1052:dossier-rme-2024-2025
 type: float
 unit: €
 periodicite: annuelle
