--- a/data/benefits/openfisca/montpellier_mutuelle_communale.yml
+++ b/data/benefits/openfisca/montpellier_mutuelle_communale.yml
@@ -1,10 +1,10 @@
 label: mutuelle communale de la ville de Montpellier
 institution: ville_montpellier
-description: La ville de Montpellier met à disposition de ses habitants une mutuelle communale avantageuse financièrement.
+description: La Ville de Montpellier met à disposition de ses habitants une mutuelle communale à des tarifs avantageux. Un accompagnement à la souscription est également proposé pour vous aider à choisir l’offre qui correspond le mieux à vos besoins et à votre budget.
 conditions:
   - Ne pas bénéficier de la Complementaire Santé Solidaire.
-link: https://www.montpellier.fr/4884-mutuelle-communale.htm
-instructions: https://www.montpellier.fr/4884-mutuelle-communale.htm
+link: http://ville.montpellier/mutuelle-communale
+instructions: http://ville.montpellier/mutuelle-communale
 prefix: la
 type: bool
 entity: familles
