--- a/data/benefits/javascript/caf-puy-de-dome-aide-bafa-generale.yml
+++ b/data/benefits/javascript/caf-puy-de-dome-aide-bafa-generale.yml
@@ -18,8 +18,7 @@ interestFlag: _interetBafa
 type: float
 unit: €
 periodicite: ponctuelle
-montant: 100
-link: https://www.caf.fr/allocataires/caf-du-puy-de-dome/offre-de-service/vie-personnelle/etre-parents/aide-au-bafa
-form: https://www.caf.fr/sites/default/files/medias/631/Allocataires/PDF_alloc/BAFA_janvier_2024.pdf
-instructions: https://www.caf.fr/allocataires/caf-du-puy-de-dome/offre-de-service/vie-personnelle/etre-parents/aide-au-bafa
-private: true
+montant: 200
+link: https://caf.fr/allocataires/caf-du-puy-de-dome/offre-de-service/vie-personnelle/aide-au-bafa#:~:text=Le%20dispositif%20local
+form: https://caf.fr/sites/default/files/medias/631/Allocataires/PDF_alloc/BAFA_janvier_2024.pdf
+instructions: https://caf.fr/allocataires/caf-du-puy-de-dome/offre-de-service/vie-personnelle/aide-au-bafa#:~:text=Le%20dispositif%20local
