Reformule les descriptions et ajoute les fiches descriptives en pdf

--- a/data/benefits/openfisca/eure_et_loir_eligibilite_adefip.yml
+++ b/data/benefits/openfisca/eure_et_loir_eligibilite_adefip.yml
@@ -1,10 +1,13 @@
-label: Aide financière d’insertion personnalisée
+label: Aide financière d’insertion personnalisée (ADéFIP)
 institution: departement_eure_et_loir
 description: >
-  Cette aide permet de pallier aux premiers frais engagés par un bénéficiaire du RSA qui entre en emploi, en formation ou qui crée son entreprise.
+  Cette aide permet aux bénéficiaires du RSA qui reprennent une activité de faire face très rapidement aux premières dépenses et aux besoins de trésorerie. Son montant varie entre 300 et 700 euros en fonction de la reprise d'activité (CDD, CDI, création d'entreprise, formation, etc.).
 conditions:
+  - Avoir un Contrat d'Engagement Réciproque (CER) ou un Parcours Personnalisé d'Accès à l'Emploi (PPAE).
+  - Ne pas avoir bénéficié de cette aide au cours des 12 derniers mois.
   - Faire la demande avec le référent RSA <a href="https://mesdemarches.eurelien.fr/media/uploads/2023/01/05/formulaire-demande-adefip-pdf.pdf" rel="noopener" target="_blank" title="Site Mes démarches euréliens - Nouvelle fenêtre">par écrit</a> ou <a href="https://formulaires.mesdemarches.eurelien.fr/vous-etes-un-partenaire-referent-d-un-beneficiaire-rsa-1/" rel="noopener" target="_blank" title="Teleservice demande - Nouvelle fenêtre">par téléservice</a>.
-link: https://mesdemarches.eurelien.fr/insertion-professionnelle/je-suis-referent-rsa-et-je-souhaite-fair/
+link: https://mesdemarches.eurelien.fr/insertion-professionnelle/je-suis-beneficiaire-du-rsa/jai-besoin-dune-aide-financiere-dans-le/
+instructions: https://betagouv.github.io/aides-jeunes-files/public/aide28/adefip.pdf
 prefix: l’
 type: bool
 entity: individus
