--- a/data/benefits/openfisca/css_participation_forfaitaire.yml
+++ b/data/benefits/openfisca/css_participation_forfaitaire.yml
@@ -1,6 +1,8 @@
 label: complémentaire santé solidaire
 institution: assurance_maladie
-description: La Complémentaire Santé Solidaire (anciennement CMU-C et ACS) est une mutuelle qui rembourse la part de vos dépenses de santé qui n'est pas prise en charge par l'Assurance Maladie.
+description:
+  'La Complémentaire Santé Solidaire (anciennement CMU-C et ACS) est une mutuelle qui rembourse la part de vos dépenses de santé qui n’est pas prise en charge par l’Assurance Maladie.
+  <br />Optez pour la téléprocédure : Si vous avez un compte Ameli.fr, connectez-vous puis effectuez votre demande directement en ligne depuis la rubrique "Mes démarches > Faire une demande de complémentaire santé solidaire"'
 prefix: la
 conditions:
   - Résider <abbr title="Métropole, Guadeloupe, Guyane, Martinique ou
@@ -8,7 +10,7 @@ conditions:
 type: mixed
 periodicite: mensuelle
 link: https://www.service-public.fr/particuliers/vosdroits/F10027
-teleservice: ""
+teleservice: https://assure.ameli.fr/PortailAS/appmanager/PortailAS/assure?_somtc=true#idPopupWARecueilConsentement
 form: https://www.complementaire-sante-solidaire.gouv.fr/sites/default/files/2024-02/cerfa_12504-10%20%28C2S%29_0_2.pdf
 instructions: https://www.complementaire-sante-solidaire.gouv.fr/mes-demarches
 entity: familles
