--- a/data/benefits/javascript/region-corse-depenses-rentree.yml
+++ b/data/benefits/javascript/region-corse-depenses-rentree.yml
@@ -1,7 +1,7 @@
 label: aide aux dépenses de rentrée scolaire pour les étudiants et étudiantes
 institution: region_corse
 description:
-  La Région aide financièrement les étudiants, boursiers ou non, inscrits dans un cursus en Corse ou en France
+  La Région aide financièrement les étudiants, boursiers ou pas, inscrits dans un cursus en Corse ou en France
   continentale, pour leurs dépenses de rentrée scolaire. Il s'agit d'une aide sur critères sociaux dont le montant varie
   de 300 € à 800 €, en fonction du quotient familial de l'étudiant ou de sa famille. Cette aide est gérée directement
   par le CROUS de Corse pour les étudiants boursiers de l'Académie de Corse.
@@ -9,7 +9,8 @@ conditions:
   - Être domicilié fiscalement en Corse au cours des trois dernières années.
   - Contacter <a target="_blank" rel="noopener" title="votre CROUS - Nouvelle fenêtre"
     href="https://www.crous-corse.fr/contact/">votre CROUS</a> si vous êtes boursier.
-  - Envoyer votre dossier via la plateforme GHJUVENTÙ si vous étudiez en France continentale (boursiers et non-boursiers) ou si vous n'êtes pas boursier et étudiez en Corse.
+  - Envoyer votre dossier via <a href="https://www.ghjuventu.corsica/my/dashboard" rel="noopener" target="_blank" title="Connexion à GHJUVENTÙ - Nouvelle fenêtre">la plateforme GHJUVENTÙ</a> si vous étudiez en France continentale (boursiers et non-boursiers) ou si vous n'êtes pas boursier et étudiez en Corse.
+  - Poser vos questions par sms au <a href="tel:+33625879180">06 25 87 91 80</a> ou par email à <a href="mailto:vieetudiante@isula.corsica">vieetudiante@isula.corsica</a>.
 conditions_generales:
   - type: regions
     values:
