--- a/data/institutions/ville_avignon.yml
+++ b/data/institutions/ville_avignon.yml
@@ -1,5 +1,6 @@
 name: Ville d'Avignon
 imgSrc: img/institutions/logo_ville_avignon.png
 type: commune
+prefix: de la
 code_insee: "84007"
 code_siren: "218400075"
