--- a/data/institutions/ville_montmorillon.yml
+++ b/data/institutions/ville_montmorillon.yml
@@ -1,5 +1,6 @@
 name: Ville de Montmorillon
 imgSrc: img/institutions/logo_ville_montmorillon.png
 type: commune
+prefix: de la
 code_insee: "86165"
 code_siren: "218601656"
