--- a/data/institutions/ville_taillan_medoc.yml
+++ b/data/institutions/ville_taillan_medoc.yml
@@ -1,5 +1,6 @@
 name: Ville du Taillan-Médoc
 imgSrc: img/institutions/logo_ville_taillan_medoc.jpg
 type: commune
+prefix: de la
 code_insee: "33519"
 code_siren: "213305196"
