--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
     labels:
       - dependencies
     allow:
-      - dependency-name: "aides-velo"
+      - dependency-name: "@betagouv/aides-velo"
   - package-ecosystem: "pip"
     directory: "./openfisca"
     schedule:
