--- a/openfisca/requirements.txt
+++ b/openfisca/requirements.txt
@@ -4,3 +4,4 @@ Openfisca-France==169.3.1
 Openfisca-Core[web-api]==43.2.2
 OpenFisca-France-Local[excel-reader]==6.15.1
 Openfisca-Paris==5.5.9
+typing_extensions==4.12.2
