--- a/data/benefits/javascript/region-ile-de-france-aide-image-r-lyceens-labaz.yml
+++ b/data/benefits/javascript/region-ile-de-france-aide-image-r-lyceens-labaz.yml
@@ -1,9 +1,13 @@
-label: aide image R pour les lycéens et les lycéennes
+label: aide imagine R pour les lycéens et les lycéennes
 prefix: l’
 institution: region_ile_de_france
 description: Une aide de 100 euros est proposée aux 500 000 lycéens et lycéennes d’Île-de-France afin de financer leur forfait Navigo imagine R scolaire 2024-2025, dont le coût annuel s'élève à 382,40 euros. Cette aide de 100 euros s'ajoute aux aides départementales.
 conditions:
-  - Télécharger l'application mobile LABAZ disponible sur Google Play / App Store et vous créer un compte.
+  - Télécharger l'application mobile LABAZ disponible sur <a target="_blank"
+    rel="noopener" title="Google Play application LABAZ - Nouvelle fenêtre" href="
+    https://play.google.com/store/apps/details?id=fr.iledefrance.labaz&hl=fr">Google Play</a> / <a target="_blank"
+    rel="noopener" title="App Store application LABAZ - Nouvelle fenêtre" href="
+    https://apps.apple.com/fr/app/labaz/id6448749127">App Store</a> et vous créer un compte.
   - Remplir le formulaire de demande de l’aide imagine R.
 conditions_generales:
   - type: regions
